--- a/own dataset/style1.css
+++ b/own dataset/style1.css
@@ -37,3 +37,26 @@ body {
   #status {
     font-size:150%;
   }
+
+  #progress-container {
+    width: 100%;
+    height: 20px;
+    background-color: #e0e0e0;
+    border-radius: 5px;
+    
+}
+
+#progress-bar {
+    width: 0%;
+    height: 100%;
+    background-color: #4caf50;
+    border-radius: 5px;
+    text-align: center;
+    color: white;
+}
+
+#progress-text {
+    margin-top: 10px;
+    text-align: center;
+    font-weight: bold;
+}
